[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/FinishLine.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ItemList.gd" type="Script" id=2]
[ext_resource path="res://Scripts/FinishLabel.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]

[node name="FinishArea" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 10, 0, 0, 0, 0.2, 0, 0, 0, 0.000976562, 0, 0, 0 )
shape = SubResource( 1 )

[node name="ItemList" type="ItemList" parent="."]
margin_right = 1662.0
margin_bottom = 1008.0
select_mode = 1
max_text_lines = 20
script = ExtResource( 2 )

[node name="FinishLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
